force-app/main/default/objects/Refund__c/Refund__c.object-meta.xml
<CustomObject>
    <description>it will track refunds associated with Payment failure.</description>
    <label>Refund</label>
    <nameField>
        <label>Refund Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Refunds</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>