force-app/main/default/objects/Refund__c/fields/Payments__c.field-meta.xml
<CustomField>
    <fullName>Payments__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Payments</label>
    <referenceTo>Payment__c</referenceTo>
    <relationshipLabel>Refunds</relationshipLabel>
    <relationshipName>Refunds</relationshipName>
    <type>Lookup</type>
</CustomField>