force-app/main/default/objects/Refund__c/fields/Refund_Transaction_ID__c.field-meta.xml
<CustomField>
    <fullName>Refund_Transaction_ID__c</fullName>
    <label>Refund_Transaction_ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>